--- a/po/cs.po
+++ b/po/cs.po
@@ -7,6 +7,7 @@
 # Based on audacious-1.2.2.cs.po by Jan Nárovec <finn@sendmail.cz>, 2004
 # fri, 2012-2013
 # Andy Andy <nd76er@gmail.com>, 2014
+# Lukáš Kotek <lkotek@suse.com>, 2020
 # IAmNotImportant, 2016-2017
 # Andy Andy <nd76er@gmail.com>, 2014-2015
 # fri, 2014
@@ -21,8 +22,8 @@ msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2020-01-26 13:18+0100\n"
-"PO-Revision-Date: 2020-01-26 12:22+0000\n"
-"Last-Translator: Thomas Lange\n"
+"PO-Revision-Date: 2020-04-02 15:29+0000\n"
+"Last-Translator: Lukáš Kotek <lkotek@suse.com>\n"
 "Language-Team: Czech (http://www.transifex.com/audacious/audacious/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -49,7 +50,7 @@ msgstr "<b>Výstup</b>"
 
 #: src/adplug/adplug-xmms.cc:349
 msgid "OPL Emulator:"
-msgstr ""
+msgstr "OPL emulátor:"
 
 #: src/adplug/adplug-xmms.cc:352
 msgid "Sample rate"
@@ -1640,12 +1641,12 @@ msgstr "_Další"
 #: src/gtkui/menus.cc:97 src/qtui/menus.cc:140 src/skins/menus.cc:114
 #: src/skins-qt/menus.cc:105
 msgid "Previous Album"
-msgstr ""
+msgstr "Předchozí album"
 
 #: src/gtkui/menus.cc:98 src/qtui/menus.cc:141 src/skins/menus.cc:115
 #: src/skins-qt/menus.cc:106
 msgid "Next Album"
-msgstr ""
+msgstr "Další album"
 
 #: src/gtkui/menus.cc:100 src/qtui/menus.cc:143
 msgid "_Repeat"
@@ -2086,11 +2087,11 @@ msgstr "Další stopa"
 
 #: src/hotkey/gui.cc:76
 msgid "Step forward"
-msgstr ""
+msgstr "Krok vpřed"
 
 #: src/hotkey/gui.cc:77
 msgid "Step backward"
-msgstr ""
+msgstr "Krok zpět"
 
 #: src/hotkey/gui.cc:78
 msgid "Mute"
@@ -2186,7 +2187,7 @@ msgid ""
 " Bryn Davies <curious@ihug.com.au>,\n"
 " Jonathan A. Davis <davis@jdhouse.org>,\n"
 " Jeremy Tan <nsx@nsx.homeip.net>"
-msgstr ""
+msgstr "Global Hotkey Plugin\nOvládejte přehrávač pomocí globálních klávesových zkratek nebo multimediálních kláves.\n\nCopyright (C) 2007-2008 Sascha Hlusiak\n\nMezi přispěvateli jsou zahrnuti:\n\nCopyright (C) 2006-2007 Vladimir Paskov \nCopyright (C) 2000-2002 Ville Syrjälä ,\nBryn Davies ,\nJonathan A. Davis ,\nJeremy Tan "
 
 #: src/jack/jack-ng.cc:51
 msgid "JACK Output"
@@ -2194,7 +2195,7 @@ msgstr "JACK výstup"
 
 #: src/jack/jack-ng.cc:123
 msgid "Client name:"
-msgstr ""
+msgstr "Jméno klienta:"
 
 #: src/jack/jack-ng.cc:125
 msgid "Automatically connect to output ports"
@@ -2202,27 +2203,27 @@ msgstr "Automaticky připojit k výstupním portům"
 
 #: src/jack/jack-ng.cc:127
 msgid "Filter ports (regex, use any port if blank):"
-msgstr ""
+msgstr "Filtrovat porty (regulární výraz, použít kterýkoliv port, není-li vyplněno):"
 
 #: src/jack/jack-ng.cc:133
 msgid "Connect to physical ports only"
-msgstr ""
+msgstr "Připojit pouze k fyzickým portům"
 
 #: src/jack/jack-ng.cc:136
 msgid "Upmix to"
-msgstr ""
+msgstr "Upmixovat na"
 
 #: src/jack/jack-ng.cc:138
 msgid "ports if input has fewer channels"
-msgstr ""
+msgstr "porty pokud má vstup méně kanálů"
 
 #: src/jack/jack-ng.cc:140
 msgid "Ignore insufficient number of ports"
-msgstr ""
+msgstr "Ignorovat nedostatečné množství portů"
 
 #: src/jack/jack-ng.cc:178
 msgid "No JACK output ports were found. Please check settings."
-msgstr ""
+msgstr "Nebyly nalezeny žádné výstupní porty typu JACK. Prosím zkontrolujte nastavení."
 
 #: src/jack/jack-ng.cc:192
 #, c-format
@@ -2367,7 +2368,7 @@ msgstr "Chybí metadata skladby"
 
 #: src/lyricwiki/lyricwiki.cc:310
 msgid "Connecting to lyrics.fandom.com ..."
-msgstr ""
+msgstr "Připojuji se k lyrics.fandom.com ..."
 
 #: src/lyricwiki/lyricwiki.cc:351
 msgid "Edit lyrics ..."
@@ -2375,59 +2376,59 @@ msgstr "Upravit text skladby..."
 
 #: src/lyricwiki-qt/lyricwiki.cc:88
 msgid "Lyrics"
-msgstr ""
+msgstr "Text skladby"
 
 #: src/lyricwiki-qt/lyricwiki.cc:111
 msgid "Nowhere"
-msgstr ""
+msgstr "Nikde"
 
 #: src/lyricwiki-qt/lyricwiki.cc:112
 msgid "LyricWiki"
-msgstr ""
+msgstr "Wiki s texty skladeb"
 
 #: src/lyricwiki-qt/lyricwiki.cc:113
 msgid "lyrics.ovh"
-msgstr ""
+msgstr "lyrics.ovh"
 
 #: src/lyricwiki-qt/lyricwiki.cc:117
 msgid "<b>Internet Sources</b>"
-msgstr ""
+msgstr "<b>Internetové zdroje</b>"
 
 #: src/lyricwiki-qt/lyricwiki.cc:118
 msgid "Fetch lyrics from:"
-msgstr ""
+msgstr "Získat text skladby z:"
 
 #: src/lyricwiki-qt/lyricwiki.cc:121
 msgid "Store fetched lyrics in local cache"
-msgstr ""
+msgstr "Uchovat získané texty skladeb v lokální mezipaměti"
 
 #: src/lyricwiki-qt/lyricwiki.cc:123
 msgid "<b>Local Storage</b>"
-msgstr ""
+msgstr "<b>Lokální úložiště</b>"
 
 #: src/lyricwiki-qt/lyricwiki.cc:124
 msgid "Load lyric files (.lrc) from local storage"
-msgstr ""
+msgstr "Načíst soubor s texty skladeb (.lrc) z lokálního úložiště"
 
 #: src/lyricwiki-qt/lyricwiki.cc:664
 msgid "Lyrics could not be found."
-msgstr ""
+msgstr "Text skladby nebyl nalezen."
 
 #: src/lyricwiki-qt/lyricwiki.cc:701
 msgid "Missing title and/or artist."
-msgstr ""
+msgstr "Chybějící název a/nebo umělec."
 
 #: src/lyricwiki-qt/lyricwiki.cc:751
 msgid "Edit Lyrics ..."
-msgstr ""
+msgstr "Upravit text skladby ..."
 
 #: src/lyricwiki-qt/lyricwiki.cc:759
 msgid "Save Locally"
-msgstr ""
+msgstr "Uložit lokálně"
 
 #: src/lyricwiki-qt/lyricwiki.cc:767
 msgid "Refresh"
-msgstr ""
+msgstr "Obnovit"
 
 #: src/m3u/m3u.cc:32
 msgid "M3U Playlists"
@@ -2662,18 +2663,18 @@ msgstr "Ukázat"
 
 #: src/openmpt/mpt.cc:50
 msgid "OpenMPT (Module Player)"
-msgstr ""
+msgstr "OpenMPT (modulární přehrávač)"
 
 #: src/openmpt/mpt.cc:134
 msgid ""
 "Module player based on libopenmpt\n"
 "\n"
 "Written by: Chris Spiegel <cspiegel@gmail.com>"
-msgstr ""
+msgstr "Modulární přehrávač založený na libopenmpt\n\nNapsal: Chris Spiegel "
 
 #: src/openmpt/mpt.cc:153
 msgid "Stereo separation:"
-msgstr ""
+msgstr "Stereo separace:"
 
 #: src/openmpt/mpt.cc:155
 msgid "%"
@@ -2681,7 +2682,7 @@ msgstr "%"
 
 #: src/openmpt/mpt.cc:159
 msgid "Interpolation:"
-msgstr ""
+msgstr "Interpolace:"
 
 #: src/openmpt/mptwrap.h:51 src/soxr/sox-resampler.cc:174
 msgid "Linear"
@@ -2689,11 +2690,11 @@ msgstr "Lineární"
 
 #: src/openmpt/mptwrap.h:52
 msgid "Cubic"
-msgstr ""
+msgstr "Kubická"
 
 #: src/openmpt/mptwrap.h:53
 msgid "Windowed sinc"
-msgstr ""
+msgstr "Sinc v okně"
 
 #: src/oss4/oss.h:75
 msgid "OSS4 Output"
@@ -2765,7 +2766,7 @@ msgstr "OpenPSF PSF1/PSF2 dekodér"
 
 #: src/psf/plugin.cc:269
 msgid "<b>OpenPSF Configuration</b>"
-msgstr ""
+msgstr "<b>Konfigurace OpenPSF</b>"
 
 #: src/psf/plugin.cc:270 src/xsf/plugin.cc:232
 msgid "Ignore length from file"
@@ -2777,11 +2778,11 @@ msgstr "PulseAudio výstup"
 
 #: src/pulse/pulse_audio.cc:72
 msgid "Context name:"
-msgstr ""
+msgstr "Název kontextu:"
 
 #: src/pulse/pulse_audio.cc:74
 msgid "Stream name:"
-msgstr ""
+msgstr "Název proudu:"
 
 #: src/pulse/pulse_audio.cc:575
 msgid ""
@@ -2886,19 +2887,19 @@ msgstr "Prohledat seznam skladeb"
 
 #: src/qtui/settings.cc:52
 msgid "Always"
-msgstr ""
+msgstr "Vždy"
 
 #: src/qtui/settings.cc:53
 msgid "Auto-hide"
-msgstr ""
+msgstr "Automaticky skrýt"
 
 #: src/qtui/settings.cc:54
 msgid "Never"
-msgstr ""
+msgstr "Nikdy"
 
 #: src/qtui/settings.cc:58
 msgid "Show playlist tabs:"
-msgstr ""
+msgstr "Zobrazit karty seznamů skladeb:"
 
 #: src/resample/resample.cc:43
 msgid "Sample Rate Converter"
@@ -3100,7 +3101,7 @@ msgstr "Při spuštění přeskenovat knihovnu"
 
 #: src/search-tool-qt/search-tool-qt.cc:168
 msgid "Monitor library for changes"
-msgstr ""
+msgstr "Monitorovat knihovnu kvůli změnám"
 
 #: src/search-tool-qt/search-tool-qt.cc:191 src/search-tool/search-tool.cc:446
 msgid ""
@@ -4151,39 +4152,39 @@ msgstr "<b>Extra stereo</b>"
 
 #: src/streamtuner/icecast-model.cc:126 src/streamtuner/shoutcast-model.cc:131
 msgid "Type"
-msgstr ""
+msgstr "Typ"
 
 #: src/streamtuner/icecast-model.cc:132
 msgid "Current Song"
-msgstr ""
+msgstr "Aktuální píseň"
 
 #: src/streamtuner/icecast-model.cc:164
 msgid "Other"
-msgstr ""
+msgstr "Další"
 
 #: src/streamtuner/ihr-model.cc:63
 msgid "Market"
-msgstr ""
+msgstr "Obchod"
 
 #: src/streamtuner/ihr-model.cc:156
 msgid "Call Letters"
-msgstr ""
+msgstr "Volací znaky"
 
 #: src/streamtuner/ihr-model.cc:162
 msgid "Description"
-msgstr ""
+msgstr "Popis"
 
 #: src/streamtuner/shoutcast-model.cc:128
 msgid "Listeners"
-msgstr ""
+msgstr "Posluchači"
 
 #: src/streamtuner/shoutcast-model.cc:188
 msgid "Top 500 Stations"
-msgstr ""
+msgstr "Top 500 stanic"
 
 #: src/streamtuner/shoutcast-model.cc:189
 msgid "Alternative"
-msgstr ""
+msgstr "Alternativa"
 
 #: src/streamtuner/shoutcast-model.cc:190
 msgid "Blues"
@@ -4199,7 +4200,7 @@ msgstr "Country"
 
 #: src/streamtuner/shoutcast-model.cc:193
 msgid "Decades"
-msgstr ""
+msgstr "Desetiletí"
 
 #: src/streamtuner/shoutcast-model.cc:194
 msgid "Easy Listening"
@@ -4207,7 +4208,7 @@ msgstr "Příjemné poslouchání"
 
 #: src/streamtuner/shoutcast-model.cc:195
 msgid "Electronic"
-msgstr ""
+msgstr "Elektronická"
 
 #: src/streamtuner/shoutcast-model.cc:196
 msgid "Folk"
@@ -4215,11 +4216,11 @@ msgstr "Folk"
 
 #: src/streamtuner/shoutcast-model.cc:197
 msgid "Inspirational"
-msgstr ""
+msgstr "Inspirující"
 
 #: src/streamtuner/shoutcast-model.cc:198
 msgid "International"
-msgstr ""
+msgstr "Mezinárodní"
 
 #: src/streamtuner/shoutcast-model.cc:199
 msgid "Jazz"
@@ -4227,7 +4228,7 @@ msgstr "Jazz"
 
 #: src/streamtuner/shoutcast-model.cc:200
 msgid "Latin"
-msgstr ""
+msgstr "Latinská"
 
 #: src/streamtuner/shoutcast-model.cc:201
 msgid "Metal"
@@ -4243,11 +4244,11 @@ msgstr "Pop"
 
 #: src/streamtuner/shoutcast-model.cc:205
 msgid "Public Radio"
-msgstr ""
+msgstr "Veřejné rádio"
 
 #: src/streamtuner/shoutcast-model.cc:206
 msgid "R&B and Urban"
-msgstr ""
+msgstr "R&B a Urban"
 
 #: src/streamtuner/shoutcast-model.cc:207
 msgid "Rap"
@@ -4263,31 +4264,31 @@ msgstr "Rock"
 
 #: src/streamtuner/shoutcast-model.cc:210
 msgid "Seasonal and Holiday"
-msgstr ""
+msgstr "Sezónní a sváteční"
 
 #: src/streamtuner/shoutcast-model.cc:211
 msgid "Soundtracks"
-msgstr ""
+msgstr "Soundtracky"
 
 #: src/streamtuner/shoutcast-model.cc:212
 msgid "Talk"
-msgstr ""
+msgstr "Mluvené slovo"
 
 #: src/streamtuner/shoutcast-model.cc:213
 msgid "Themes"
-msgstr ""
+msgstr "Znělky"
 
 #: src/streamtuner/streamtuner.cc:59
 msgid "Shoutcast"
-msgstr ""
+msgstr "Shoutcast"
 
 #: src/streamtuner/streamtuner.cc:60
 msgid "Icecast"
-msgstr ""
+msgstr "Icecast"
 
 #: src/streamtuner/streamtuner.cc:71
 msgid "Stream Tuner"
-msgstr ""
+msgstr "Ladění proudu"
 
 #: src/tonegen/tonegen.cc:45
 msgid "Tone Generator"
@@ -4383,31 +4384,31 @@ msgstr "Přehrávač zvukového formátu Vortex: Alexandr Sašnov <sashnov@ngs.r
 msgid ""
 "VU Meter Plugin for Audacious\n"
 "Copyright 2017-2019 Marc Sánchez Fauste"
-msgstr ""
+msgstr "VU Meter Plugin for Audacious\nCopyright 2017-2019 Marc Sánchez Fauste"
 
 #: src/vumeter-qt/vumeter_qt.cc:35
 msgid "<b>VU Meter Settings</b>"
-msgstr ""
+msgstr "<b>Nastavení VU metru</b>"
 
 #: src/vumeter-qt/vumeter_qt.cc:37
 msgid "Peak hold time:"
-msgstr ""
+msgstr "Pozdržení zobrazení maxima:"
 
 #: src/vumeter-qt/vumeter_qt.cc:42
 msgid "Fall-off time:"
-msgstr ""
+msgstr "Pozdržení před zobrazením minima:"
 
 #: src/vumeter-qt/vumeter_qt.cc:44
 msgid "dB/second"
-msgstr ""
+msgstr "dB/sekunda"
 
 #: src/vumeter-qt/vumeter_qt.cc:46
 msgid "Display legend"
-msgstr ""
+msgstr "Zobrazit popisky"
 
 #: src/vumeter-qt/vumeter_qt.h:37
 msgid "VU Meter"
-msgstr ""
+msgstr "VU metr"
 
 #: src/waveout/waveout.cc:43
 msgid "Win32 waveOut"
