--- a/po/es.po
+++ b/po/es.po
@@ -20,6 +20,7 @@
 # Lucía Balsa <lucia.balsa.prados@gmail.com>, 2012
 # Marco Antonio Frias Butrón <inactive+smaug@transifex.com>, 2012
 # Marco Antonio Frias Butrón <inactive+smaug@transifex.com>, 2012
+# Marc Sánchez <sanchezfauste@gmail.com>, 2020
 # Matias Menich <und34d@gmail.com>, 2012
 # Toni Estévez <toni.estevez@gmail.com>, 2019-2020
 # xukosky <xukosky@yahoo.es>, 2011-2012
@@ -30,8 +31,8 @@ msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2020-01-26 13:18+0100\n"
-"PO-Revision-Date: 2020-01-26 17:21+0000\n"
-"Last-Translator: Toni Estévez <toni.estevez@gmail.com>\n"
+"PO-Revision-Date: 2020-04-27 17:49+0000\n"
+"Last-Translator: Marc Sánchez <sanchezfauste@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/audacious/audacious/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4392,7 +4393,7 @@ msgstr "<b>Ajustes del vúmetro</b>"
 
 #: src/vumeter-qt/vumeter_qt.cc:37
 msgid "Peak hold time:"
-msgstr "Tiempo de espera máximo:"
+msgstr "Tiempo de mantenimiento del pico:"
 
 #: src/vumeter-qt/vumeter_qt.cc:42
 msgid "Fall-off time:"
