--- a/po/it.po
+++ b/po/it.po
@@ -6,6 +6,7 @@
 # David Rossi <davros74@gmail.com>, 2012
 # Federico <federico421@hotmail.it>, 2013-2014
 # minderz <franketti@gmail.com>, 2014
+# eagleman <giacomomargarito@yahoo.it>, 2020
 # Jacopo Lorenzetti <jacopo.jl@gmail.com>, 2011-2012
 # Jacopo Lorenzetti <jacopol@cyan.xubiq.com>, 2012-2013
 # Marco Mangiacavalli, 2013
@@ -17,8 +18,8 @@ msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2020-01-26 13:18+0100\n"
-"PO-Revision-Date: 2020-01-26 12:22+0000\n"
-"Last-Translator: Jacopo Lorenzetti <jacopol@cyan.xubiq.com>\n"
+"PO-Revision-Date: 2020-04-25 14:36+0000\n"
+"Last-Translator: eagleman <giacomomargarito@yahoo.it>\n"
 "Language-Team: Italian (http://www.transifex.com/audacious/audacious/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,7 +46,7 @@ msgstr "<b>Uscita</b>"
 
 #: src/adplug/adplug-xmms.cc:349
 msgid "OPL Emulator:"
-msgstr ""
+msgstr "Emulatore OPL:"
 
 #: src/adplug/adplug-xmms.cc:352
 msgid "Sample rate"
@@ -4159,7 +4160,7 @@ msgstr ""
 
 #: src/streamtuner/ihr-model.cc:162
 msgid "Description"
-msgstr ""
+msgstr "Descrizione"
 
 #: src/streamtuner/shoutcast-model.cc:128
 msgid "Listeners"
@@ -4305,7 +4306,7 @@ msgstr "In elaborazione ..."
 
 #: src/ui-common/dialogs-qt.cc:43
 msgid "Information"
-msgstr ""
+msgstr "Informazioni"
 
 #: src/voice_removal/voice_removal.cc:28
 msgid "Voice Removal"
