--- a/po/pl.po
+++ b/po/pl.po
@@ -15,7 +15,8 @@
 # Marco Oliver Grunwald <m@mgrvnwald.com>, 2013
 # Marco Oliver Grunwald <m@mgrvnwald.com>, 2013
 # mkkot <marcin2006@gmail.com>, 2013-2014
-# M_, 2017-2018,2020
+# No Ne, 2020
+# No Ne, 2017-2018,2020
 # Piotr Sokół <psokol.l10n@gmail.com>, 2012
 # Piotr Strębski <strebski@gmail.com>, 2017
 # Piotr Strębski <strebski@gmail.com>, 2014-2015
@@ -28,8 +29,8 @@ msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2020-01-26 13:18+0100\n"
-"PO-Revision-Date: 2020-01-26 15:42+0000\n"
-"Last-Translator: M_\n"
+"PO-Revision-Date: 2020-03-27 19:57+0000\n"
+"Last-Translator: No Ne\n"
 "Language-Team: Polish (http://www.transifex.com/audacious/audacious/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1606,7 +1607,7 @@ msgstr "_Wyszukaj w bibliotece"
 
 #: src/gtkui/menus.cc:86 src/qtui/menus.cc:118
 msgid "A_bout ..."
-msgstr "O _programie..."
+msgstr "In_formacje o..."
 
 #: src/gtkui/menus.cc:87 src/qtui/menus.cc:120
 msgid "_Settings ..."
@@ -3400,7 +3401,7 @@ msgstr "Usługi"
 
 #: src/skins/menus.cc:95 src/skins-qt/menus.cc:86
 msgid "About ..."
-msgstr "O programie..."
+msgstr "Informacje o ..."
 
 #: src/skins/menus.cc:96 src/skins-qt/menus.cc:87
 msgid "Settings ..."
